Configuration settings and writing file(s)

--- a/src/Services/MyTodoApi.InMem/myTodoApi.InMem.csproj
+++ b/src/Services/MyTodoApi.InMem/myTodoApi.InMem.csproj
@@ -7,7 +7,7 @@
     <UserSecretsId>2620a49c-ad3a-44a0-aaaf-a0243c7b644c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-    <DockerfileContext>.</DockerfileContext>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
