--- a/src/Services/MyTodoApi.InMem/appsettings.Development.json
+++ b/src/Services/MyTodoApi.InMem/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ExportFile": {
+    "Path": "Export",
+    "Enabled": true
   }
 }
