--- a/src/Services/MyTodoApi.Sqlite/myTodoApi.Sqlite.csproj
+++ b/src/Services/MyTodoApi.Sqlite/myTodoApi.Sqlite.csproj
@@ -7,7 +7,7 @@
     <UserSecretsId>3b92c67d-20d0-482b-bbb7-78eaed7a011e</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-    <DockerfileContext>.</DockerfileContext>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
