--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -6,6 +6,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - ExportFile__Path=/home/app/export 
+      - ExportFile__Enabled=true   
     ports:
       - "5000:8080" # "8080"
       - "5001:8081" # "8081"
